Working on UI-kit components

--- a/src/UI-Kit/Button/Button.module.scss
+++ b/src/UI-Kit/Button/Button.module.scss
@@ -1,3 +1,9 @@
 .Button {
-  color: red;
+  display: inline-block;
+  padding: 1rem 1.5rem;
+  background: red;
+  
+  *, > a {
+    color: white;
+  }
 }
