--- a/src/UI-Kit/Button/Button.module.scss
+++ b/src/UI-Kit/Button/Button.module.scss
@@ -2,6 +2,9 @@
   display: inline-block;
   padding: 1rem 1.5rem;
   background: red;
+
+  text-transform: uppercase;
+  letter-spacing: 1px;
   
   &, > a {
     color: white;
