--- a/src/UI-Kit/Navbar/Navbar.module.scss
+++ b/src/UI-Kit/Navbar/Navbar.module.scss
@@ -1,18 +1,37 @@
 .Navbar {
   padding: 1rem 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background: white;
+}
+
+.NavbarOffset {
+  width: 100%;
+  height: 6rem;
 }
 
 .NavbarBrand {
+  display: inline-block;
+  height: 4rem;
+  width: 4rem;
+  line-height: 4rem;
+  font-size: 1.25rem;
+  
   color: black;
   text-decoration: none;
-  height: 3rem;
-  width: 3rem;
-  display: inline-block;
-  line-height: 3rem;
   text-align: center;
+  font-weight: bold;
+  
   background: white;
   border: 1px solid #2a2a2a;
-  font-weight: bold;
+
+  transition: none;
+
+  &:hover {
+    background: #2a2a2a;
+    color: white;
+  }
 }
 
 .NavbarLinks {
