--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,30 @@
 @import "./grid.scss";
+@import './variables.scss';
 
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700,900');
 
-$default-sans-serif-stack: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"';
-
 body, html {
-  font-family: 'Work Sans', $default-sans-serif-stack;
+  font-family: $sans-serif-font-stack;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+hr {
+  border: 0px solid;
+  height: 1px;
+  background: #aaaaaa;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 1em 0 0.3em;
+}
+
+p {
+  padding: 0;
+  margin: 0.5rem 0 1rem;
+}
+
+ol, ul {
+  // padding-left: 0;
 }
