--- a/src/UI-Kit/Header/Header.module.scss
+++ b/src/UI-Kit/Header/Header.module.scss
@@ -1,3 +1,4 @@
+@import '../../styles/_mixins.scss';
 @import '../../styles/variables.scss';
 
 .Header {
@@ -9,18 +10,34 @@
 .Headline {
   font-size: 5.125rem;
   letter-spacing: -5px;
+
+  @include mobile-only {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
 }
 
 .Title {
   font-size: 3rem;
   letter-spacing: -2px;
   line-height: 3rem;
+
+  @include mobile-only {
+    font-size: 2rem;
+    line-height: 2rem;
+  }  
 }
 
 .Subtitle {
   font-size: 1.375rem;
   text-transform: uppercase;
   letter-spacing: 10px;
+  line-height: 1.375rem;
 
   color: $text-color-secondary;
+
+  @include mobile-only {
+    font-size: 1.25rem;
+    line-height: 1.4rem;
+  }
 }
