--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,21 @@
-@import "./grid.scss";
 @import './variables.scss';
 
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700,900');
+/////////////////////
+// T H E   G R I D //
+/////////////////////
+
+// This file imports the bootstrap grid, which is included in a NPM
+// This also shows an example of how to make use of the scss included in the NPM:
+// You can declare a variable here and then import the .scss, which will override the variables
+// included in the package.
+//
+// For a list of all the variables, refer to here (it's just the bootstrap variables):
+// https://github.com/m-spyratos/bootstrap-4-grid/blob/master/scss/grid/_variables.scss
+
+// These override the default spacers in the bootstrap utilities
+@import "../../node_modules/bootstrap-4-grid/scss/grid.scss";
+
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700');
 
 body, html {
   font-family: $sans-serif-font-stack;
