--- a/src/UI-Kit/Link/Link.module.scss
+++ b/src/UI-Kit/Link/Link.module.scss
@@ -1,10 +1,14 @@
 .Link {
   color: red;
+  text-decoration: none;
 
-  transition: all 0.2s linear;
+  transition: all 0.1s linear;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-bottom: 1px solid transparent;
 
   &:hover {
-    color: darken(red, 15%);
+    border-color: red;
   }
 }
 
