--- a/src/UI-Kit/Navbar/Navbar.module.scss
+++ b/src/UI-Kit/Navbar/Navbar.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   width: 100%;
   background: white;
-  height: 6rem;
+  height: 6.1rem;
   overflow: hidden;
 
   transition: all 0.2s ease-in-out;
@@ -30,20 +30,7 @@
 }
 
 .Brand {
-  display: inline-block;
-  height: 4rem;
-  width: 4rem;
-  line-height: 4rem;
-  font-size: 1.25rem;
-  
-  color: black;
-  text-decoration: none;
-  text-align: center;
-  font-weight: bold;
-  
-  background: white;
-  border: 1px solid #2a2a2a;
-
+  color: #2a2a2a;
   transition: none;
 
   &:hover {
@@ -59,9 +46,6 @@
   list-style-type: none;
   margin: 0 0 0 auto;
   padding: 0;
-
-  text-transform: uppercase;
-  letter-spacing: 1px;
 
   li {
     margin-left: 1.5rem;
