--- a/src/templates/projectTemplate.module.scss
+++ b/src/templates/projectTemplate.module.scss
@@ -2,6 +2,32 @@
   img {
     max-width: 100%;
     border: 1px solid #2a2a2a;
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
   }
+}
+
+.Item {
+  box-sizing: border-box;
+  width: (100% / 2);
+  float: left;
+  padding-left: 15px;
+}
+
+.Grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -1rem; /* gutter size offset */
+  width: auto;
+}
+
+.Column {
+  padding-left: 1rem; /* gutter size */
+  background-clip: padding-box;
+}
+ 
+// Style your items
+.Column > div { /* change div to reference your elements you put in <Masonry> */
+  // background: grey;
+  margin-bottom: 1rem;
 }
