--- a/src/templates/projectTemplate.module.scss
+++ b/src/templates/projectTemplate.module.scss
@@ -1,9 +1,16 @@
+$grid-gutter-size: 1rem;
+
 .ProjectTemplate {
   img {
     max-width: 100%;
     border: 1px solid #2a2a2a;
-    // margin-bottom: 1rem;
   }
+}
+
+.Description {
+  box-sizing: border-box;
+  padding-bottom: $grid-gutter-size;
+  padding-right: $grid-gutter-size;
 }
 
 .Item {
@@ -14,20 +21,17 @@
 }
 
 .Grid {
-  display: -webkit-box; /* Not needed if autoprefixing */
-  display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  margin-left: -1rem; /* gutter size offset */
+  margin-left: -$grid-gutter-size;
   width: auto;
 }
 
 .Column {
-  padding-left: 1rem; /* gutter size */
+  padding-left: $grid-gutter-size;
   background-clip: padding-box;
 }
- 
-// Style your items
-.Column > div { /* change div to reference your elements you put in <Masonry> */
-  // background: grey;
-  margin-bottom: 1rem;
+
+/* change div to reference your elements you put in <Masonry> */
+.Column > div { 
+  margin-bottom: $grid-gutter-size;
 }
