--- a/src/UI-Kit/Header/Header.module.scss
+++ b/src/UI-Kit/Header/Header.module.scss
@@ -29,10 +29,11 @@
 }
 
 .Subtitle {
-  font-size: 1.375rem;
+  font-size: 1.625rem;
   text-transform: uppercase;
   letter-spacing: 10px;
-  line-height: 1.375rem;
+  line-height: 1.625rem;
+  font-weight: normal;
 
   color: $text-color-secondary;
 
