--- a/src/UI-Kit/Link/Link.module.scss
+++ b/src/UI-Kit/Link/Link.module.scss
@@ -1,14 +1,14 @@
+@import "../../styles/_variables.scss";
+
 .Link {
-  color: red;
+  color: $brand-primary;
   text-decoration: none;
 
   transition: all 0.1s linear;
-  text-transform: uppercase;
-  letter-spacing: 1px;
   border-bottom: 1px solid transparent;
 
   &:hover {
-    border-color: red;
+    border-color: $brand-primary;
   }
 }
 
