--- a/src/UI-Kit/Navbar/Navbar.module.scss
+++ b/src/UI-Kit/Navbar/Navbar.module.scss
@@ -30,12 +30,10 @@
 }
 
 .Brand {
-  color: #2a2a2a;
   transition: none;
 
   &:hover {
-    background: #2a2a2a;
-    color: white;
+    background: darken($brand-primary, 10%);
   }
 }
 
