--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -51,11 +51,10 @@ ol, ul {
   line-height: 4rem;
   font-size: 1.25rem;
   
-  color: black;
+  color: white;
   text-decoration: none;
   text-align: center;
   font-weight: bold;
   
-  background: white;
-  border: 1px solid #2a2a2a;
+  background: $brand-primary;
 }
