--- a/src/UI-Kit/HomeTile/HomeTile.module.scss
+++ b/src/UI-Kit/HomeTile/HomeTile.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/_variables.scss";
+@import "../../styles/_mixins.scss";
 
 .HomeTile {
 
@@ -28,7 +29,6 @@
   p {
     font-size: 1.25rem;
     color: $text-color-secondary;
-    max-width: 65%;
   }
 }
 
@@ -37,14 +37,39 @@
   background-size: cover;
   background-repeat: no-repeat;
 
-  height: 100%;
-  width: 1rem;
+  flex: 1 0 auto;
+  position: relative;
+  
+  min-height: 100%;
   width: 20%;
-  position: absolute;
-  right: 0;
-  top: 0;
+  min-width: 10rem;
+
+  @include mobile-only {
+    display: none;
+  }
 }
 
 .TileTitle {
   font-size: 2.25rem;
 }
+
+.Link {
+  margin-top: auto;
+  align-self: flex-start;
+  font-size: 1.15rem;
+}
+
+// .Wrapper {
+//   background: red;
+//   flex: 1 0 auto;
+//   position: relative;
+//   width: 20%;
+//   height: 0;
+//   padding-bottom: 20%;  
+// }
+// .Wrapper:after {
+//   content: "";
+//   float:left;
+//   display: block;
+//   padding-top: 100%;
+// }
