--- a/src/templates/caseStudy.scss
+++ b/src/templates/caseStudy.scss
@@ -2,13 +2,16 @@
 
 .case-study-template {
 
+  font-size: 1.15rem;
+  line-height: 1.8;
+
   a {
-    color: red;
+    color: $brand-primary;
     text-decoration: none;
     border-bottom: 1px solid transparent;
 
     &:hover {
-      border-color: red;
+      border-color: $brand-primary;
     }
   }
 
@@ -27,14 +30,65 @@
       @extend .Header;
       @extend .Subtitle;
     }
+
+    h1,
+    h2,
+    h3 {
+      @include mobile-only {
+        margin-top: 1.65em;
+        margin-bottom: 0.5em;
+      }
+    }
   }
 
   .post-body {
+    color: $text-color-secondary;
+
     img {
       max-width: 100%;
       background: #fff;
-      border: 1px solid #aaa;
-      padding: 0.5rem;
+      margin: 2rem 0;
+    }
+
+    .scrollable {
+      margin: 2rem 0;
+      position: relative;
+
+      img {
+        margin: 0;
+      }
+
+      @include mobile-only {
+        overflow: scroll;
+        scroll-behavior: smooth;
+        -webkit-overflow-scrolling: touch;
+
+        ::-webkit-scrollbar {
+          width: 0px !important;  /* remove scrollbar space */
+        }
+
+        img {
+          max-width: none;
+          min-height: 15rem;
+          max-height: 30rem;
+          margin-bottom: 2rem;
+        }
+
+        &:after {
+          content: 'Scroll →';
+          display: block;
+          position: absolute;
+          bottom: 0;
+          font-size: 0.8rem;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          color: lighten($text-color-secondary, 30%);
+        }
+      }
+    }
+
+    p {
+      margin-bottom: 1.5rem;
     }
   }
 
@@ -45,5 +99,25 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  .table-of-contents {
+    @include left-border;
+
+    ol { 
+      counter-reset: item;
+      padding-left: 0;
+      
+      li {
+        display: block;
+
+        &:before { 
+          content: counter(item) ".";
+          counter-increment: item;
+          width: 1.75em;
+          display: inline-block;
+        }
+      }
+    }
   }
 }
