--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,3 +57,23 @@ ol, ul {
   
   background: $brand-primary;
 }
+
+.text-right {
+  text-align: right !important;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.float-left {
+  float: left !important;
+}
+
+.float-right {
+  float: right !important;
+}
