--- a/src/UI-Kit/Tile/Tile.module.scss
+++ b/src/UI-Kit/Tile/Tile.module.scss
@@ -1,4 +1,7 @@
 .Tile {
+  position: relative;
+  overflow: hidden;
+
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -14,4 +17,14 @@
   position: absolute;
   bottom: 1rem;
   right: 1rem;
+  z-index: 2;
+}
+
+.BackgroundImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
