Got syntax highlighting working (very ugly rn)

--- a/src/templates/caseStudyTemplate.scss
+++ b/src/templates/caseStudyTemplate.scss
@@ -2,17 +2,8 @@
 
 .case-study-template {
 
-  code {
-    display: inline-block;
-    background: #eee;
-    padding: 0 0.25rem;
-    border-radius: 3px;
-  }
-
   pre code {
-    display: block;
-    padding: 0.5rem 1rem;
-    overflow-x: auto;
+    font-size: 1rem;
   }
 
   font-size: 1.15rem;
