--- a/src/pages/homepage.module.scss
+++ b/src/pages/homepage.module.scss
@@ -3,6 +3,12 @@
 .MainHeader {
   .Name {
     line-height: 4rem;
+    font-size: 5.125rem;
+    letter-spacing: -5px;
+
+    @include mobile-only {
+      font-size: 4rem;
+    }
   }
 
   span, p {
