--- a/src/templates/syntax-highlighting.scss
+++ b/src/templates/syntax-highlighting.scss
@@ -5,7 +5,8 @@
  * Inspired by Github syntax coloring
  */
 
-$background-color: #fafafa;
+$code-background-color: #ebebeb;
+$pre-background-color: #fafafa;
 
 $keyword-color: $brand-primary; // red
 $string-color: #0569dd; // blue
@@ -31,8 +32,11 @@ pre[class*="language-"] {
   tab-size: 4;
   hyphens: none;
 
+  background-color: $pre-background-color;
+  border: 1px solid darken($pre-background-color, 5%);
+
   &::selection, & ::selection {
-    background: darken($background-color, 10%);
+    background: darken($pre-background-color, 10%);
   }
 }
 
@@ -42,8 +46,10 @@ pre[class*="language-"] {
   padding: 1em;
   margin: .5em 0;
   overflow: auto;
-  background-color: $background-color;
-  border: 1px solid darken($background-color, 5%);
+  
+  code {
+    border: none;
+  }
 }
 
 :not(pre) > code[class*="language-"],
@@ -54,7 +60,6 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"] {
   padding: 0 0.25rem;
   display: inline-block;
-  background: $background-color;
 }
 
 .token {
