Improved blog overview page

--- a/src/UI-Kit/Header/Header.module.scss
+++ b/src/UI-Kit/Header/Header.module.scss
@@ -57,7 +57,8 @@ $header-size: (
   }
 }
 
-.Headline + .Tagline {
+.Headline + .Tagline,
+.Title + .Tagline {
   margin-top: -1rem;
   color: $text-color-secondary;
 
