--- a/src/templates/postTemplate.scss
+++ b/src/templates/postTemplate.scss
@@ -107,6 +107,7 @@
     position: relative;
     padding-top: $footer-top-whitespace;
 
+    // footer decorative divider
     &:before {
       $line-width: 2rem;
       
@@ -121,6 +122,72 @@
       content: '';
       height: 1px;
       width: $line-width;
+    }
+
+    .post-navigation {
+      color: $text-color-secondary;
+      font-size: 1rem;
+
+      &:nth-child(2) {
+        text-align: right;
+
+        @include media-breakpoint-down(md) {
+          text-align: left;
+          margin-top: 1rem;
+        }
+      }
+
+      .post-link {
+        line-height: 1;
+
+        &:before, &:after {
+          display: inline-block;
+          transition: all 0.1s linear;
+        }
+      }
+
+      .older-post:before {
+        content: '←';
+        left: 0;
+        margin-right: 0.5rem;
+      }
+
+      .newer-post:after {
+        content: '→';
+        right: 0;
+        top: 0;
+        margin-left: 0.5rem;
+      }
+
+      @include media-breakpoint-up(lg) {
+        .post-link {
+          position: relative;
+          display: inline-block;
+          max-width: 100%;
+
+          &:before, &:after {
+            display: block;
+            position: absolute;
+            margin: 0;
+          }
+
+          .title {
+            display: inline-block;
+            max-width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+
+          &.older-post .title {
+            padding-left: 1.5rem;
+          }
+
+          &.newer-post .title {
+            padding-right: 1.5rem;
+          }
+        }
+      }
     }
   }
 }
