--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,23 +26,31 @@ $spacers: map-merge(
 
 $header-size: (
   headline: (
-    desktop: 3.5rem,
-    phone: 2.25rem
+    desktop: 3rem,
+    phone: 2.25rem,
+    desktop-kerning: -2px,
+    phone-kerning: -2px,
   ),
   tagline: (
-    desktop: 1.5rem,
-    phone: 1.25rem
+    desktop: 1.3rem,
+    phone: 1.15rem,
+    kerning: -1px,
   ),
   title: (
-    desktop: 2.25rem,
-    phone: 1.8rem
+    desktop: 1.75rem,
+    phone: 1.75rem,
+    desktop-kerning: -1.5px,
+    phone-kerning: -1px,
   ),
   subtitle: (
-    desktop: 1.75rem,
-    phone: 1.4rem
+    desktop: 1.6rem,
+    phone: 1.4rem,
+    kerning: -1px,
   ),
   section-title: (
-    desktop: 1.625rem,
-    phone: 1.25rem
+    desktop: 1.5rem,
+    phone: 1.25rem,
+    desktop-kerning: 10px,
+    phone-kerning: 4px
   ),  
 );
