--- a/src/templates/postTemplate.scss
+++ b/src/templates/postTemplate.scss
@@ -2,13 +2,13 @@
 
 .post-template {
 
-  font-size: 1.15rem;
+  // font-size: 1.15rem;
   line-height: 1.8;
 
-  @include mobile-only {
-    font-size: 1rem;
-    line-height: 1.6;
-  }
+  // @include mobile-only {
+  //   font-size: 1rem;
+  //   line-height: 1.6;
+  // }
 
   a {
     color: $brand-primary;
@@ -40,6 +40,15 @@
 
     h1,
     h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin: 1.5em 0 0.3em;
+    }
+
+    h1,
+    h2,
     h3 {
       @include mobile-only {
         margin-top: 1.65em;
@@ -59,6 +68,11 @@
 
     p {
       margin-bottom: 1.5rem;
+
+      img {
+        margin-bottom: 0;
+        margin-top: 0.5rem;
+      }
     }
 
     blockquote {
@@ -125,7 +139,7 @@
     }
 
     .post-navigation {
-      color: $text-color-secondary;
+      color: lighten($text-color-secondary, 20%);
       font-size: 1rem;
 
       &:nth-child(2) {
