--- a/src/templates/postTemplate.scss
+++ b/src/templates/postTemplate.scss
@@ -2,13 +2,11 @@
 
 .post-template {
 
-  // font-size: 1.15rem;
   line-height: 1.8;
 
-  // @include mobile-only {
-  //   font-size: 1rem;
-  //   line-height: 1.6;
-  // }
+  @include mobile-only {
+    line-height: 1.6;
+  }
 
   a {
     color: $brand-primary;
