--- a/src/templates/post/postTemplate.scss
+++ b/src/templates/post/postTemplate.scss
@@ -1,4 +1,5 @@
-@import '../UI-Kit/Header/Header.module.scss';
+@import '../../UI-Kit/Header/Header.module.scss';
+@import './syntaxHighlighting.scss';
 
 .post-template {
 
