--- a/src/templates/project/projectTemplate.module.scss
+++ b/src/templates/project/projectTemplate.module.scss
@@ -1,5 +1,5 @@
-@import "../styles/_variables.scss";
-@import "../styles/_mixins.scss";
+@import "../../styles/_variables.scss";
+@import "../../styles/_mixins.scss";
 
 $grid-gutter-size: 1rem;
 
