supporting photo credits

--- a/src/templates/post/postTemplate.scss
+++ b/src/templates/post/postTemplate.scss
@@ -19,6 +19,14 @@
     }
   }
 
+  .post-header {
+    .photo-attribution {
+      text-align: center;
+      font-size: 0.9rem;
+      padding-top: 0.5rem;
+    }
+  }
+
   .post-body {  
     color: $text-color-primary;
 
