--- a/src/components/EmailListForm/EmailListForm.module.scss
+++ b/src/components/EmailListForm/EmailListForm.module.scss
@@ -1,32 +1,66 @@
-.EmailListForm {
-  display: flex;
-  flex-direction: column;
-  
-  background: #f2f2f2;
-  color: #2a2a2a;
+@import "../../styles/_variables.scss";
+@import "../../styles/_mixins.scss";
 
-  font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
-  padding: 2rem;
+.EmailListForm { 
+  background: #f5f5f5;
+  color: $text-color-primary;
 
-  h2 {
-    margin-top: 0;
-    margin-bottom: 1rem;
+  .SubscribeCallout {
+    display: flex;
+    flex-direction: column;
   }
 
-  .Wrapper {
-    display: flex;
-    flex-direction: row;
+  .DataEntry {
+    background: #e1e1e1;
+    position: relative;
+
+    &.SignupComplete .SignupFields {
+      visibility: hidden;
+    }
+
+    .SignupCompletionMessage {
+      display: flex;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      padding: 2rem;
+
+      visibility: hidden;
+      z-index: -1;
+    }
+
+    &.SignupComplete .SignupCompletionMessage {
+      visibility: visible;
+      z-index: 1;
+    }
+  }
+
+  label {
+    font-weight: bold;
   }
 
   input {
-    color: #2a2a2a;
+    color: $text-color-primary;
     width: 100%;
-    border: none;
+    border: 1px solid white;
+    transition: all 0.1s linear;
+
+    &:focus {
+      outline: none;
+      border-color: $text-color-primary;
+    }
+
+    &.Error {
+      color: red;
+    }
   }
 
   button,
   input {
-    padding: 1rem 1.5rem;
+    padding: 0.75rem 1rem;
   }
 
   button {
@@ -34,7 +68,7 @@
     
     border: none;
     background-image: none;
-    background-color: #DD0505;
+    background-color: $brand-primary;
     color: white;
 
     letter-spacing: 1px;
@@ -42,7 +76,7 @@
     
     &:hover {
       cursor: pointer;
-      background: darken(#DD0505, 15%);
+      background: darken($brand-primary, 15%);
     }    
   }
 }
